# cablog-rs

./: .gitignore  README.md  docker-compose.yml  metadata.json  package.json  run-local.sh
backend/: Dockerfile.backend  package-lock.json  package.json
backend/src/: server.ts
frontend/: Cargo.toml  Dockerfile.frontend  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
